--- a/css/balance/balance.scss
+++ b/css/balance/balance.scss
@@ -225,7 +225,7 @@
 
   .owl-item {
     min-height: 20rem !important;
-
+    margin-right: 1.5rem;
     .item {
       min-height: 20rem !important;
 
