--- a/css/app/app.css
+++ b/css/app/app.css
@@ -3,7 +3,7 @@
 @import url("../app.css");
 @import url("../index.css");
 .sidebar_menu {
-  max-width: 13rem;
+  max-width: 10rem;
   width: 100%;
   height: 100vh;
   background-color: var(--color_white);
@@ -50,9 +50,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 6rem;
+  height: 7rem;
   border-bottom: 1px solid var(--border_color);
-  padding: 1.5rem;
+  padding: 2rem 1.5rem;
 }
 
 .sidebar_menu .logo_big img {
@@ -966,6 +966,7 @@
 
 .owl_card_slider .owl-item {
   min-height: 20rem !important;
+  margin-right: 1.5rem;
 }
 
 .owl_card_slider .owl-item .item {
@@ -2382,6 +2383,7 @@ button.btn_action_boost svg {
   height: 100vh;
   width: 100%;
   overflow-y: auto;
+  padding-bottom: 10rem;
 }
 
 .assets_title {
@@ -3260,8 +3262,8 @@ label.label.attachFile svg {
   min-height: 100vh;
   width: 100%;
   padding: 1.5rem;
-  -webkit-box-shadow: 0px 0px 32px 2px #0000000D;
-          box-shadow: 0px 0px 32px 2px #0000000D;
+  -webkit-box-shadow: 0px 0px 32px 2px #0000000d;
+          box-shadow: 0px 0px 32px 2px #0000000d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3280,8 +3282,8 @@ label.label.attachFile svg {
   background-color: var(--color_white);
   padding: 2.6rem 2rem;
   border-radius: 0.8rem;
-  -webkit-box-shadow: 0px 0px 16px 0px #0000000D;
-          box-shadow: 0px 0px 16px 0px #0000000D;
+  -webkit-box-shadow: 0px 0px 16px 0px #0000000d;
+          box-shadow: 0px 0px 16px 0px #0000000d;
 }
 
 .header_body .form .form_logo {
@@ -3450,7 +3452,7 @@ label.label.attachFile svg {
 
 .otp_verify_Progress {
   border-radius: 50%;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   height: 6.5rem;
   width: 6.5rem;
   margin: 2rem auto;
@@ -3466,6 +3468,44 @@ label.label.attachFile svg {
   height: 100%;
   width: 100%;
   border-radius: 50%;
+}
+
+#pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  background-color: var(--color_white);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+#pagination li {
+  margin-left: 1rem;
+}
+
+#pagination li a {
+  font-size: 1.4rem;
+  padding: 1rem;
+  background-color: var(--color_lightprimary);
+  height: 2.8rem;
+  width: 2.8rem;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: var(--color_dark);
 }
 
 .help_box {
