--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar_menu {
-  max-width: 13rem;
+  max-width: 10rem;
   width: 100%;
   height: 100vh;
   background-color: var(--color_white);
@@ -46,9 +46,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 6rem;
+  height: 7rem;
   border-bottom: 1px solid var(--border_color);
-  padding: 1.5rem;
+  padding: 2rem 1.5rem;
 }
 
 .sidebar_menu .logo_big img {
