--- a/css/sidebar/sidebar.scss
+++ b/css/sidebar/sidebar.scss
@@ -1,6 +1,6 @@
 // ========= Sidebar
 .sidebar_menu {
-  max-width: 13rem;
+  max-width: 10rem;
   width: 100%;
   height: 100vh;
   background-color: var(--color_white);
@@ -37,9 +37,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 6rem;
+    height: 7rem;
     border-bottom: 1px solid var(--border_color);
-    padding: 1.5rem;
+    padding: 2rem 1.5rem;
 
     img {
       max-width: 100%;
