--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -147,8 +147,8 @@ button.btn_action_boost {
   padding: 1.2rem;
   background-color: var(--color_white);
   border-radius: 0.5rem;
-  margin-bottom: 1rem;
   border: 1px solid var(--border_color);
+  border-bottom: none;
   width: 100%;
 }
 
@@ -344,6 +344,11 @@ label.label {
   border: 1px solid var(--color_grey);
   padding: 0.7rem 1.4rem;
   outline: none;
+
+  &.transparent{
+    background-color: transparent;
+    border: none;
+  }
 }
 
 .transition_select_2 {
@@ -871,7 +876,7 @@ label.label {
     }
   }
 }
- 
+
 
 .signForm {
   background-color: var(--color_white);
@@ -1041,6 +1046,7 @@ label.label {
 
   li {
     margin-left: 1rem;
+
     a {
       font-size: 1.4rem;
       padding: 1rem;
@@ -1125,6 +1131,48 @@ label.label {
       font-weight: 600;
       text-transform: capitalize;
       margin-top: 2rem;
+    }
+  }
+}
+
+
+.table_menu {
+
+  .btn-secondary {
+    height: 3.5rem;
+    width: 3.5rem;
+    background-color: var(--color_lightprimary);
+    border-radius: 100%;
+    padding: 1rem;
+
+    svg {
+      color: var(--color_primary);
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  .dropdown-menu {
+    max-width: 15rem;
+    border: 1px solid #ececec;
+    border-radius: 1rem;
+
+    li {
+      a {
+        font-size: 1.3rem;
+        padding: 0.6rem 1.5rem;
+
+        svg {
+          height: 2rem;
+          width: auto;
+          margin-right: 0.6rem;
+        }
+
+        &:hover {
+          background-color: var(--color_lightprimary);
+          color: var(--color_primary);
+        }
+      }
     }
   }
 }
