--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -306,6 +306,13 @@ table.table {
   }
 }
 
+.page_title{
+  font-size: 1.6rem;
+  color: var(--color_dark);
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
 label.label {
   margin-bottom: 1rem;
   display: block;
