--- a/css/header/header.scss
+++ b/css/header/header.scss
@@ -18,7 +18,7 @@
       width: 100%;
     }
 
-    @media screen and (max-width:991px) {
+    @media screen and (max-width: 991px) {
       display: block;
     }
   }
@@ -31,7 +31,7 @@
     padding: 0.5rem;
     color: var(--color_primary);
 
-    @media screen and (max-width:991px) {
+    @media screen and (max-width: 991px) {
       display: none;
     }
   }
@@ -71,7 +71,7 @@
           min-width: 4rem;
 
           &:before {
-            content: '';
+            content: "";
             position: absolute;
             top: 0.7rem;
             right: 0.7rem;
@@ -82,7 +82,7 @@
           }
         }
 
-        @media screen and (max-width:991px) {
+        @media screen and (max-width: 991px) {
           height: 3.4rem;
           width: 3.4rem;
         }
@@ -149,21 +149,24 @@
                 align-items: center;
                 justify-content: center;
 
-                 svg{
+                svg {
                   height: 2rem;
                   width: 2rem;
-                 }
+                }
               }
             }
           }
 
-          @media screen and (max-width:991px) {
+          @media screen and (max-width: 991px) {
             height: 100vh;
             width: 100vw;
             max-width: 100vw;
             min-width: 100vw;
             top: 0 !important;
             left: 0 !important;
+            right: auto !important;
+            position: fixed !important;
+            transform: translate(0) !important;
           }
         }
       }
@@ -175,19 +178,6 @@
           max-width: 35rem;
           min-width: 35rem;
           padding: 1rem;
-
-          button.boost_menuClose {
-            min-width: 3.5rem;
-            min-height: 3.5rem;
-            width: 3.5rem;
-            height: 3.5rem;
-            border-radius: 0.6rem;
-            padding: 1rem;
-            background-color: var(--color_lightprimary);
-            color: var(--color_primary);
-            margin-bottom: 1.5rem;
-            display: none;
-          }
 
           h5.userMenu_title {
             font-size: 1.6rem;
@@ -226,8 +216,6 @@
                 color: var(--color_secondary);
               }
             }
-
-
           }
 
           ul {
@@ -263,16 +251,40 @@
             }
           }
 
-          @media screen and (max-width:991px) {
+          @media screen and (max-width: 991px) {
             height: 100vh;
             width: 100vw;
             max-width: 100vw;
             min-width: 100vw;
             top: 0 !important;
             left: 0 !important;
+            right: auto !important;
+            transform: translate(0) !important;
+            position: fixed !important;
           }
         }
       }
     }
+  }
+}
+
+button.boost_menuClose {
+  min-width: 3.5rem;
+  min-height: 3.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  background-color: var(--color_lightprimary);
+  color: var(--color_primary);
+  display: none;
+
+  svg{
+    height: 100%;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 991px) {
+    display: block;
   }
 }
